--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
   <body>
-    
-    <div class="container">
-      <div class="badge">
-        <div class="circle">
-
+    <div class="general-cont">
+      <div class="container">
+        <div class="badge">
+          <div class="circle">
+  
+          </div>
+          <strong>eTech</strong>
         </div>
-        <strong>eTech</strong>
       </div>
+      <h5>The transformation of education...<a href="https://etch-two.vercel.app/"><i class="uil uil-arrow-right"></i></a></h5>
     </div>
-    <h5>The transformation of education...<a href="https://etch-two.vercel.app/"><i class="uil uil-arrow-right"></i></a></h5>
   </body>
 </html>
